--- a/1. matplotlibライブラリ.ipynb
+++ b/1. matplotlibライブラリ.ipynb
@@ -445,7 +445,7 @@
     "\n",
     "`tokyo-temps.csv` には、気象庁のオープンデータからダウンロードした、東京の平均気温のデータが入っています。具体的には、各行の第2列に気温の値が格納されており、47行目に1875年6月の、48行目に1875年7月の、…、53行目に1875年12月の、54行目に1876年1月の、…という風に2017年1月のデータまでが格納されています。\n",
     "\n",
-    "そこで、1875年以降の平均気温の値をy軸に、月の値をx軸に描画した散布図を表示するとともに、描画したx軸とy軸の値をタプルに格納して返す関数 `scatter_tokyotemps` を作成してください。  \n",
+    "そこで、1875年以降の平均気温の値をy軸に、月の値をx軸に描画した散布図を描画する関数 `scatter_tokyotemps` を作成してください。  \n",
     "グラフのタイトル、x軸、y軸のラベル、凡例、グリッド等については、以下に示す完成予想図を参考にしてください。\n",
     "  \n",
     "![1-3.png](attachment:64816f89-e188-4783-9962-099a5fecf22d.png)"
