--- a/4. データ分布の可視化.ipynb
+++ b/4. データ分布の可視化.ipynb
@@ -717,7 +717,7 @@
    "id": "0e85026d-617d-429a-b658-0ead978b0a1f",
    "metadata": {},
    "source": [
-    "ｍ妥協案として、これら2つのアプローチを組み合わせることが可能です。  \n",
+    "妥協案として、これら2つのアプローチを組み合わせることが可能です。  \n",
     "ヒストグラム・モードでは、`displot()`は（`histplot()`と同様に）平滑化されたKDE曲線を含めるオプションがあります。  \n",
     "\n",
     "（kde=Trueであり、kind=\"kde \"ではないことに注意）"
@@ -777,7 +777,7 @@
     "tags": []
    },
    "source": [
-    "ｍECDFプロットには2つの重要な利点があります。  \n",
+    "ECDFプロットには2つの重要な利点があります。  \n",
     "ヒストグラムやKDEと異なり、各データポイントを直接表現します。  \n",
     "\n",
     "つまり，ビン・サイズやスムージング・パラメータを考慮する必要がなく、曲線は単調増加なので、複数の分布を比較するのに適しています。"
